// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "gap": 12,
      "minHeight": 55,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 13,
      "width": "100%",
    }
  }
  testID="entry-component-1"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 2,
          "flexShrink": 0,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        {
          "borderColor": "#026fd7",
        },
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "#0e171e",
        },
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        [
          {
            "flex": 1,
          },
          [
            {
              "textDecorationLine": "none",
            },
            {
              "color": "#0e171e",
            },
          ],
        ],
      ]
    }
  />
</View>
`;

exports[`Entry renders correctly in edit mode 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#d9dfe3",
      "borderBottomWidth": 1,
      "display": "flex",
      "flexDirection": "row",
      "gap": 12,
      "minHeight": 55,
      "opacity": 1,
      "paddingHorizontal": 18,
      "paddingVertical": 13,
      "width": "100%",
    }
  }
  testID="entry-component-1"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 2,
          "flexShrink": 0,
          "height": 20,
          "justifyContent": "center",
          "width": 20,
        },
        {
          "borderColor": "#026fd7",
        },
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <TextInput
      autoFocus={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder=""
      placeholderTextColor="#687076"
      showSoftInputOnFocus={true}
      style={
        [
          {
            "borderRadius": 8,
            "borderWidth": 1.4,
            "flex": 1,
            "fontSize": 14,
            "height": 40,
            "paddingHorizontal": 11,
            "paddingVertical": 9,
          },
          {
            "borderColor": "#0e171e",
            "color": "#0e171e",
          },
        ]
      }
      testID="entry-input-1"
      value="Default Ingredient"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="save-button-1"
    >
      <Text />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="cancel-button-1"
    >
      <Text />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="delete-button-1"
    >
      <Text />
    </View>
  </View>
</View>
`;
